[tool.poetry]
name = "rlexperiments"
version = "0.1.0"
description = ""
authors = ["Sho Okumoto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
notebook = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
